@@ -31,7 +31,7 @@ Todoyu::$CONFIG['EXT']['portal']['info'] = array(
 		'company'	=> 'snowflake productions GmbH, Zurich'
 	),
 	'state'			=> 'stable',
-	'version'		=> '1.4.0',
+	'version'		=> '1.4.1',
 	'constraints'	=> array(
 		'core'		=> '2.3.0',
 		'depends'	=> array(
