@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<labels>
+	<label index="general">Característiques generals</label>
+	<label index="general.use">Utilitzar el portal i veure l'àrea del portal</label>
+</labels>
