@@ -1,5 +1,8 @@
 todoyu portal extension changelog
 
+portal 1.4.1 - not released yet
+	* Added: Catalan language. Credits to Carles Baiges Camprubí LaCol (www.lacol.org)
+
 portal 1.4.0 - 2013-03-27
 	* Require: core 2.3.0
 	* Changed: Moved tab counter update methods to core
